--- a/ratmap/index.html
+++ b/ratmap/index.html
@@ -8,7 +8,7 @@
     html, body{
       margin: 0;
     }
-    #map path{ stroke: #ccc; fill:#eee; stroke-width: .5; }
+    #map path{ stroke: #ccc; stroke-width: .5; }
     #map defs path{ stroke: none; }
     #map path.highlight{ stroke: black; stroke-width: 1;}
     #map path.ocean{ fill: #bbd4e3; stroke:none;}
