--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ d3.selectAll( "rect" )
 
 				<section>
 					<pre><code>.data( ratData )</code></pre>
-					<p>The <code>data()</code> method is the very soul of D3. With it, an array of data is bound to DOM elements.</p>
+					<p>The <code>data()</code> method is the very soul of D3. With it, an array of data is bound to page elements.</p>
 					<p>In your web inspector, see that the data has been directly attached to the <code>rect</code> elements as a <code>__data__</code> property.</p>
 					<img src="images/element_data.jpg"/>
 				</section>
