Add more links to the examples

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<section>
 					<p>Follow along!</p>
 					<p><a href="http://maptimeboston.github.io/d3-maptime" target="_blank">maptimeboston.github.io/d3-maptime</a></p>
-					<p>Or get the code:</p>
+					<p>Or get the code for examples:</p>
 					<p><a href="http://github.com/maptimeboston/d3-maptime" target="_blank">github.com/maptimeboston/d3-maptime</a></p>
 				</section>
 
@@ -365,7 +365,7 @@ el.style( "opacity" ); // returns .5
 
 				<section>
 					<h2>You made a chart with D3! Hooray!</h2>
-					<h3>#ratchart</h3>
+					<h3><a href="example1/index.html" target="_blank">#ratchart</a></h3>
 				</section>
 
 				<section>
@@ -491,8 +491,8 @@ svg.selectAll( "rect" )
   return i*25;
 })
 					</code></pre>
-					<p>This is how we space the bars our horizontally using that second <code>i</code> argument, the index of each bar in the selection. For our four rectangles, <code>i</code> here will be 0, 1, 2, and 3, giving us x positions of 0, 25, 50, and 75.</p>
-					<p>After this, we set fixed width and color values, and set the heights as we did in the previous example.</p>
+					<p>We space the bars our horizontally using that second <code>i</code> argument, the index of each bar in the selection. For our four rectangles, <code>i</code> here will be 0, 1, 2, and 3, giving us x positions of 0, 25, 50, and 75.</p>
+					<p>After this, we set fixed width and color values, and set the heights as we did in the previous example, and <a href="example2/index.html" target="_blank">we're done!</a></p>
 				</section>
 
 				<section>
@@ -840,7 +840,7 @@ neighborhoods.selectAll( "path" )
 
 				<section>
 					<h2>It's time.</h2>
-					<h1 class="fragment">#ratmap</h1>
+					<h1 class="fragment"><a href="example4/index.html" target="_blank">#ratmap</a></h1>
 				</section>
 
 				<section>
