The slide transition is annoying me

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="slides">
 				<section>
 					<h1>Mapping with D3</h1>
-					<h3>A gentle introduction, if that's possible</h3>
+					<h3>A friendly introduction</h3>
 					<p>
 						<small>Andy Woodruff for Maptime Boston</small>
 					</p>
@@ -987,7 +987,7 @@ d3.select(this)
 				history: true,
 				center: true,
 
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+				transition: 'fade', // none/fade/slide/convex/concave/zoom
 
 				// Optional reveal.js plugins
 				dependencies: [
