May as well add Twitter contacts

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 					<h1>Mapping with D3</h1>
 					<h3>A friendly introduction</h3>
 					<p>
-						<small>Andy Woodruff for Maptime Boston</small>
+						<small>Andy Woodruff for Maptime Boston</small><br>
+						<small><a href="http://twitter.com/maptimeboston" target="_blank">@maptimeBoston</a> | <a href="http://twitter.com/awoodruff" target="_blank">@awoodruff</a></small>
 					</p>
 				</section>
 
