--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ d3.select(this)
 
 				<section>
 					<h2>Suggested challenge #2</h2>
-					<p>Instead of using the path generator to show points, we could use SVG <code>&lt;circle&gt;</code> or other elements. (The <a href="https://github.com/maptimeBoston/d3-maptime/blob/gh-pages/example6/index.html#L49-L61" target="_blank">tansition example</a> used images.) Try making a proportional symbol map from data such as <a href="ratcount/ratcount.geojson" target="_blank">this</a>. Use the map projection to position circles with the "cx" and "cy" attributes, and use the numerical data to set the circle size with the "r" attribute.</p>
+					<p>Instead of using the path generator to show points, we could use SVG <code>&lt;circle&gt;</code> or other elements. (The <a href="https://github.com/maptimeBoston/d3-maptime/blob/gh-pages/example6/index.html#L49-L61" target="_blank">transition example</a> used images.) Try making a proportional symbol map from data such as <a href="ratcount/ratcount.geojson" target="_blank">this</a>. Use the map projection to position circles with the "cx" and "cy" attributes, and use the numerical data to set the circle size with the "r" attribute.</p>
 				</section>
 
 				<section>
