--- a/example4/index.html
+++ b/example4/index.html
@@ -23,7 +23,7 @@ var albersProjection = d3.geo.albers()
   .center( [0, 42.313] )
   .translate( [width/2,height/2] );
 
-var path = d3.geo.path()
+var geoPath = d3.geo.path()
     .projection( albersProjection );
 
 neighborhoods.selectAll( "path" )
@@ -31,7 +31,7 @@ neighborhoods.selectAll( "path" )
   .enter()
   .append( "path" )
   .attr( "fill", "#ccc" )
-  .attr( "d", path );
+  .attr( "d", geoPath );
 
 var rodents = svg.append( "g" );
 
@@ -41,7 +41,7 @@ rodents.selectAll( "path" )
   .append( "path" )
   .attr( "fill", "#900" )
   .attr( "stroke", "#999" )
-  .attr( "d", path );
+  .attr( "d", geoPath );
 
   </script>
 </body>
