--- a/example1/index.html
+++ b/example1/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>A D3 chart</title>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
 
