--- a/ratmap/index.html
+++ b/ratmap/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <head>
   <title>#ratmap!!</title>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
   <style>
     html, body{
